--- a/uwsgi/app/templates/about.html
+++ b/uwsgi/app/templates/about.html
@@ -9,14 +9,14 @@
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://sun9-9.userapi.com/s/v1/ig2/7tEx901z0VsgLPuwq6Z6AGNOY07KAooJD7x8GxnF3v7hFHcAZ6aTT1HhPNT7226Az2BEnrLnZpMF_XDNI3vR1CqT.jpg?size=2160x2160&quality=95&type=album">
         <h2>Лаврентий Наумов</h2>
-        <p>Не бойся пробовать. Часто самый плохой вариант - это не попробовать.</p>
+        <p>Программист</p>
         <p><a class="btn btn-secondary" href="https://vk.com/prostolavr">Заглянуть в вк</a></p>
       </div>
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://i.pinimg.com/originals/2e/2e/21/2e2e2125ee53807c2d77b34773f84b5c.jpg">
         <h2>Демьян Бубнов</h2>
-        <p>Здесь будет большая и длинная цитата не крупным шрифтом вместо этого текста, который я сейчас максимально пытаюсь растянуть</p>
-        <p><a class="btn btn-secondary" href="#">Соц.сети?</a></p>
+        <p>Программист</p>
+        <p><a class="btn btn-secondary" href="https://vk.com/id618170319">Заглянуть в вк</a></p>
       </div>
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://thumbs.dreamstime.com/b/%D1%87%D0%B5%D1%80%D0%BD%D1%8B%D0%B9-%D1%83%D0%BA%D0%B0%D0%B7%D1%8B%D0%B2%D0%B0%D1%8E%D1%89%D0%B8%D0%B9-%D0%BF%D0%B0%D0%BB%D0%B5%D1%86-%D0%BA-%D1%82%D0%B5%D0%B1%D0%B5-%D1%87%D0%B5%D1%80%D0%BD%D0%B0%D1%8F-%D1%80%D1%83%D0%BA%D0%B0-%D1%83%D0%BA%D0%B0%D0%B7%D1%8B%D0%B2%D0%B0%D1%8E%D1%89%D0%B0%D1%8F-%D0%BF%D0%B0%D0%BB%D1%8C%D1%86%D0%B5%D0%BC-%D0%BD%D0%B0-229124886.jpg">
