--- a/waitress/app/static/css/messenger.css
+++ b/waitress/app/static/css/messenger.css
@@ -1,21 +1,20 @@
 }
-body{
+body {
     background-color: #f4f7f6;
     margin-top:20px;
 }
+#my-sidebar {
+    float:right;
+}
 .friend {
-    float: left; /* Обтекание справа */
     border: 1px solid #333; /* Параметры рамки вокруг */
     width: 300px; /* Ширина колонки */
     padding: 5px; /* Поля вокруг текста */
-    margin: 10px 10px 20px 100px; /* Значения отступов */
 }
 .requests {
-    float: right; /* Обтекание справа */
     border: 1px solid #333; /* Параметры рамки вокруг */
     width: 300px; /* Ширина колонки */
     padding: 5px; /* Поля вокруг текста */
-    margin: 10px 100px 20px 50px; /* Значения отступов */
 }
 .card {
     background: #fff;
