--- a/waitress/app/templates/messenger.html
+++ b/waitress/app/templates/messenger.html
@@ -6,9 +6,9 @@
 
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 <link rel='stylesheet' href="{{ url_for('static', filename='css/messenger.css') }}">
-
-
-<div class="friend">
+<div class="m-5">
+    <aside id="my-sidebar">
+    <div class="friend">
 <form class="p-4 p-md-5 border rounded-3 bg-light" method="post">
     <h1>Добавить друга</h1>
     {% if message %}
@@ -21,7 +21,7 @@
     <button class="w-100 btn btn-lg btn-primary" type="submit">Добавить</button>
 </form>
 </div>
-<div class="requests">
+        <div class="requests">
 <form class="p-4 p-md-5 border rounded-3 bg-light">
 <div id="plist" class="people-list">
     <h2>Заявки в друзья</h2>
@@ -43,33 +43,32 @@
 </div>
 </form>
 </div>
-<div class="container">
-<div class="row clearfix">
-    <div class="col-lg-12">
-        <div class="card chat-app">
-            <div id="plist" class="people-list">
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="fa fa-search"></i></span>
-                    </div>
-                    <input type="text" class="form-control" placeholder="Search...">
-                </div>
-                <ul class="list-unstyled chat-list mt-2 mb-0">
-                    {% for user in users %}
-                    <div onclick="location.href='/messenger/{{ user.id }}';">
-                        <li class="clearfix">
-                            <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="avatar">
-                            <div class="about">
-                                <div class="name">{{user.name}}</div>
+    </aside>
+            <div class="row clearfix">
+                <div class="col-lg-12">
+                    <div class="card chat-app">
+                        <div id="plist" class="people-list">
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="fa fa-search"></i></span>
+                                </div>
+                                <input type="text" class="form-control" placeholder="Search...">
                             </div>
-                        </li>
+                            <ul class="list-unstyled chat-list mt-2 mb-0">
+                                {% for user in users %}
+                                <div onclick="location.href='/messenger/{{ user.id }}';">
+                                    <li class="clearfix">
+                                        <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="avatar">
+                                        <div class="about">
+                                            <div class="name">{{user.name}}</div>
+                                        </div>
+                                    </li>
+                                </div>
+                                {% endfor %}
+                            </ul>
+                        </div>
                     </div>
-                    {% endfor %}
-                </ul>
+                </div>
             </div>
-
         </div>
-    </div>
-</div>
-</div>
 {% endblock %}
