Remove messenger and edit pages

--- a/waitress/app/templates/support.html
+++ b/waitress/app/templates/support.html
@@ -22,7 +22,7 @@
         <h2 class="blog-post-title">Разработка проекта</h2>
         <p class="blog-post-meta">23 января, 2022 автор: Лаврентий</p>
 
-        <p>Сегодня прошла встреча разработчиков, на которой было запланировано множество нового функционала. В ближайшее время ожидайте релиз!</p>
+        <p>Сегодня было запланировано множество нового функционала. В ближайшее время ожидайте релиз!</p>
         <p>К релизу готовится следующий функционал. Возможность безопасно делиться файлами, обновление дизайна и страниц и даже встроенный мессенджер!</p>
         <hr>
     </article>
