--- a/waitress/app/templates/success_edit_account.html
+++ b/waitress/app/templates/success_edit_account.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% block title %}
-Регистрация
+Изменение аккаунта
 {% endblock %}
 {% block body %}
   <div class="px-4 py-5 my-5 text-center">
-    <h1 class="display-5 fw-bold">Регистрация прошла успешно!</h1>
+    <h1 class="display-5 fw-bold">Изменение аккаунта прошло успешно!</h1>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Теперь необходимо войти в аккаунт</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
