--- a/waitress/app/templates/messenger.html
+++ b/waitress/app/templates/messenger.html
@@ -8,8 +8,7 @@
 <link rel='stylesheet' href="{{ url_for('static', filename='css/messenger.css') }}">
 <div class="m-5">
     <aside id="my-sidebar">
-    <div class="friend">
-<form class="p-4 p-md-5 border rounded-3 bg-light" method="post">
+<form class="p-4 p-md-5 border rounded-3 bg-light my-sidebar-part" method="post">
     <h1>Добавить друга</h1>
     {% if message %}
         <p>{{ message }}</p>
@@ -20,9 +19,7 @@
     </div>
     <button class="w-100 btn btn-lg btn-primary" type="submit">Добавить</button>
 </form>
-</div>
-        <div class="requests">
-<form class="p-4 p-md-5 border rounded-3 bg-light">
+<form class="p-4 p-md-5 border rounded-3 bg-light my-sidebar-part">
 <div id="plist" class="people-list">
     <h2>Заявки в друзья</h2>
     <ul class="list-unstyled chat-list mt-2 mb-0">
@@ -42,7 +39,6 @@
     </ul>
 </div>
 </form>
-</div>
     </aside>
             <div class="row clearfix">
                 <div class="col-lg-12">
