--- a/waitress/app/templates/premium.html
+++ b/waitress/app/templates/premium.html
@@ -15,11 +15,8 @@
           <div class="card-body">
             <h1 class="card-title pricing-card-title">0₽<small class="text-muted fw-light">/мес.</small></h1>
             <p>5 ГБ</p>
-            <ul class="circle-list mt-3 mb-4">
-              Можно делиться файлами
-            </ul>
-            <br><br>
-            <a href="/register"  type="button" class="w-100 btn btn-lg btn-outline-primary">Начать</a>
+            <p>Можно делиться файлами</p><br><br>
+            <a href="/account/register"  type="button" class="w-100 btn btn-lg btn-outline-primary">Начать</a>
           </div>
         </div>
       </div>
@@ -31,11 +28,7 @@
           <div class="card-body">
             <h1 class="card-title pricing-card-title">0₽<small class="text-muted fw-light">/мес.</small></h1>
             <p>20 ГБ</p>
-            <ul class="circle-list list-unstyled mt-3 mb-4">
-              Можно делиться файлами<br>
-              Доступ к мессенджеру
-            </ul>
-            <br>
+            <p>Можно делиться файлами<br>Доступ к мессенджеру</p><br>
             <a href="/get_premium" class="w-100 btn btn-lg btn-primary">Купить</a>
           </div>
         </div>
@@ -48,11 +41,7 @@
           <div class="card-body">
             <h1 class="card-title pricing-card-title">0₽<small class="text-muted fw-light">/мес.</small></h1>
             <p>∞ ГБ</p>
-            <ul class="circle-list list-unstyled mt-3 mb-4">
-              Можно делиться файлами<br>
-              Доступ к мессенджеру<br>
-              Абсолютная и безграничная власть
-            </ul>
+            <p>Можно делиться файлами<br>Доступ к мессенджеру<br>Абсолютная и безграничная власть</p>
             <button type="button" class="w-100 btn btn-lg btn-primary" disabled>Ваш план</button>
           </div>
         </div>
