--- a/waitress/app/templates/cloud.html
+++ b/waitress/app/templates/cloud.html
@@ -7,7 +7,7 @@
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">Ваше хранилище</h1>
-        <a href="/load"><p class="lead btn btn-primary my-2">Загрузить файл</p></a>
+        <a href="/cloud/load"><p class="lead btn btn-primary my-2">Загрузить файл</p></a>
       </div>
     </div>
   </section>
@@ -32,9 +32,9 @@
                 {% endif %}
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a type="button" href="/download/{{ file.path }}" class="btn btn-sm btn-outline-primary">Скачать</a>
-                    <a type="button" href="/edit_file/{{ file.path }}" class="btn btn-sm btn-outline-secondary">Подробнее</a>
-                    <a type="button" href="/remove/{{ file.path }}" class="btn btn-sm btn-outline-secondary">Удалить</a>
+                    <a type="button" href="/cloud/download/{{ file.path }}" class="btn btn-sm btn-outline-primary">Скачать</a>
+                    <a type="button" href="/cloud/edit_file/{{ file.path }}" class="btn btn-sm btn-outline-secondary">Подробнее</a>
+                    <a type="button" href="/cloud/remove/{{ file.path }}" class="btn btn-sm btn-outline-secondary">Удалить</a>
                   </div>
                   <small class="text-muted">{{ file.date.date() }}</small>
                 </div>
