--- a/waitress/app/templates/success_register.html
+++ b/waitress/app/templates/success_register.html
@@ -8,7 +8,7 @@
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Теперь необходимо войти в аккаунт</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <a href="/login"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">Войти</button></a>
+        <a href="/account/login"><button type="button" class="btn btn-primary btn-lg px-4 gap-3">Войти</button></a>
       </div>
     </div>
   </div>
