--- a/waitress/app/templates/messenger.html
+++ b/waitress/app/templates/messenger.html
@@ -20,7 +20,7 @@
     <button class="w-100 btn btn-lg btn-primary" type="submit">Добавить</button>
 </form>
 <form class="p-4 p-md-5 border rounded-3 bg-light my-sidebar-part">
-<div id="plist" class="people-list">
+<div class="people-list">
     <h2>Заявки в друзья</h2>
     <ul class="list-unstyled chat-list mt-2 mb-0">
         {% if not req %}
@@ -43,7 +43,7 @@
             <div class="row clearfix">
                 <div class="col-lg-12">
                     <div class="card chat-app">
-                        <div id="plist" class="people-list">
+                        <div class="people-list">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fa fa-search"></i></span>
@@ -52,14 +52,12 @@
                             </div>
                             <ul class="list-unstyled chat-list mt-2 mb-0">
                                 {% for user in users %}
-                                <div onclick="location.href='/messenger/{{ user.id }}';">
-                                    <li class="clearfix">
+                                    <li class="clearfix" onclick="location.href='/messenger/{{ user.id }}';">
                                         <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="avatar">
                                         <div class="about">
                                             <div class="name">{{user.name}}</div>
                                         </div>
                                     </li>
-                                </div>
                                 {% endfor %}
                             </ul>
                         </div>
