--- a/waitress/app/templates/load.html
+++ b/waitress/app/templates/load.html
@@ -3,18 +3,17 @@
 Выложить файл
 {% endblock %}
 {% block body %}
-  <form method=post enctype=multipart/form-data>
-    <p><input id="file-input" hidden type=file name=File>
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Загрузка файла</h1>
-        <p>
-          <label for="file-input" class="btn btn-secondary my-2">Выберите файл</label>
-          <input class="btn btn-primary my-2" type=submit value=Загрузить>
-        </p>
+        <h1 class="m-5 fw-light">Загрузка файла</h1>
+        <form method=post  enctype=multipart/form-data>
+            <input type="file" name="File" id="file">
+            <input class="btn btn-primary my-2" type=submit value=Загрузить>
+        </form>
       </div>
     </div>
   </section>
-  </form>
+
+
 {% endblock %}
