Add error pages

--- a/waitress/app/templates/no_work_with_text.html
+++ b/waitress/app/templates/no_work_with_text.html
@@ -8,6 +8,6 @@
 <link rel='stylesheet' href="{{ url_for('static', filename='css/messenger.css') }}">
 
 <div class="m-5">
-    <h1 class="text-center m-5">Ой, кажется что-то случилось. Повторите попытку позже</h1>
+    <h1 class="text-center m-5">{{ text }}</h1>
 </div>
 {% endblock %}
