Try to fix errors

--- a/waitress/app/templates/premium.html
+++ b/waitress/app/templates/premium.html
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="m-5">
     <h1 class="text-center m-5">Больше специально для тебя</h1>
-    <h2 class="text-center m-5 text-muted">Выбери свой план</h2>
+    <h2 class="text-center m-5 text-muted">Выбери свой тариф</h2>
     <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
       <div class="col">
         <div class="card mb-4 rounded-3 shadow-sm">
@@ -42,7 +42,7 @@
             <h1 class="card-title pricing-card-title">0₽<small class="text-muted fw-light">/мес.</small></h1>
             <p>∞ ГБ</p>
             <p>Можно делиться файлами<br>Доступ к мессенджеру<br>Абсолютная и безграничная власть</p>
-            <button type="button" class="w-100 btn btn-lg btn-primary" disabled>Ваш план</button>
+            <button type="button" class="w-100 btn btn-lg btn-primary" disabled>Ваш тариф</button>
           </div>
         </div>
       </div>
