--- a/waitress/app/templates/support.html
+++ b/waitress/app/templates/support.html
@@ -11,7 +11,7 @@
         Что нового?
     </h3>
     <article class="blog-post">
-        <h2 class="blog-post-title">Бум нового функционала</h2>
+        <h2 class="blog-post-title">Больше нового функционала</h2>
         <p class="blog-post-meta">15 апреля, 2022 автор: Лаврентий</p>
 
         <p>Сегодня состоялся тестовый релиз нового функционала. Теперь можно делиться файлами (а можно и не делится), редактировать имена файлов и давать им описание, использовать кириллицу в названиях файлов, следить за датой загрузки файла и много всего ещё.</p>
@@ -26,9 +26,5 @@
         <p>К релизу готовится следующий функционал. Возможность безопасно делиться файлами, обновление дизайна и страниц и даже встроенный мессенджер!</p>
         <hr>
     </article>
-    <nav class="blog-pagination" aria-label="Pagination">
-        <a class="btn btn-outline-primary disabled">Older</a>
-        <a class="btn btn-outline-secondary disabled">Newer</a>
-    </nav>
 </div>
 {% endblock %}
