Save form when it is incorrect

--- a/python/app/templates/login.html
+++ b/python/app/templates/login.html
@@ -2,6 +2,8 @@
 {% block title %}
 Вход
 {% endblock %}
+{% block head %}
+{% endblock %}
 {% block body %}
 <div class="container col-xl-10 col-xxl-8 px-4 py-5">
     <div class="row align-items-center g-lg-5 py-5">
@@ -11,13 +13,13 @@
       </div>
       <div class="col-md-10 mx-auto col-lg-5">
         <form class="p-4 p-md-5 border rounded-3 bg-light" method="post">
-          <p>{{ message }}</p>
+          <p>{{ message if message else '' }}</p>
           <div class="form-floating mb-3">
-            <input name="Login" type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <input value="{{ username if username else '' }}" name="Login" type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">Логин</label>
           </div>
           <div class="form-floating mb-3">
-            <input name="Password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
+            <input value="{{ password if password else '' }}" name="Password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
             <label for="floatingPassword">Пароль</label>
           </div>
           <button class="w-100 btn btn-lg btn-primary" type="submit">Войти</button>
