--- a/python/app/templates/support.html
+++ b/python/app/templates/support.html
@@ -11,6 +11,14 @@
         Что нового?
     </h3>
     <article class="blog-post">
+        <h2 class="blog-post-title">И снова новый функционал</h2>
+        <p class="blog-post-meta">10 мая, 2022 автор: Лаврентий</p>
+
+        <p>Теперь отрображается процесс загрузки файлов, поля ввода не слетают при неверном вводе, страницы адаптируются под мобильные устройства, ссылка копируется одним нажатием кнопки, а также доступна загрузка файлов до 16ГБ! Улучшена производительность и безопасность.</p>
+        <p>Ждём ваши новые предложения функционала!</p>
+        <hr>
+    </article>
+    <article class="blog-post">
         <h2 class="blog-post-title">Больше нового функционала</h2>
         <p class="blog-post-meta">15 апреля, 2022 автор: Лаврентий</p>
 
