Edit and add simple_passwords

--- a/app/templates/file.html
+++ b/app/templates/file.html
@@ -39,7 +39,7 @@
                     </label>
                 </div><br>
                 <textarea class="form-control">{{ link }}</textarea>
-                <button id="linkButton" type="button" class="btn btn-secondary" onclick="copyText( '{{ link }}' )">Copy link</button>
+                <button id="linkButton" type="button" class="btn btn-secondary" onclick="copyText( '{{ link }}' )">Скопировать ссылку</button>
                 <input class="btn btn-primary my-2" type="submit" value=Сохранить>
             </div>
         </div>
