--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,36 +9,36 @@
         {% block head %}{% endblock %}
     </head>
     <body>
-        <div class="container">
-            <header class="my-header d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+        <div class=" container">
+            <header class="my-pink-header my-header d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
               <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-                <span class="fs-4">lava-land.ru</span>
+                <span class="nav-link fs-3 my-pink-link">lava-land.ru</span>
               </a>
               <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 {% if pages[0] %}
-                  <li><a href="/cloud" class="nav-link px-2">Хранилище</a></li>
+                  <li><a href="/cloud" class="nav-link px-2 fs-5 my-pink-link-active">Хранилище</a></li>
                 {% else %}
-                  <li><a href="/cloud" class="nav-link px-2 link-dark">Хранилище</a></li>
+                  <li><a href="/cloud" class="nav-link px-2 fs-5 my-pink-link">Хранилище</a></li>
                 {% endif %}
                 {% if pages[1] %}
-                  <li><a href="/messenger" class="nav-link px-2">Мессенджер</a></li>
+                  <li><a href="/messenger" class="nav-link px-2 fs-5 my-pink-link-active">Мессенджер</a></li>
                 {% else %}
-                  <li><a href="/messenger" class="nav-link px-2 link-dark">Мессенджер</a></li>
+                  <li><a href="/messenger" class="nav-link px-2 fs-5 my-pink-link">Мессенджер</a></li>
                 {% endif %}
                 {% if pages[2] %}
-                  <li><a href="/premium" class="nav-link px-2">Премиум</a></li>
+                  <li><a href="/premium" class="nav-link px-2 fs-5 my-pink-link-active">Премиум</a></li>
                 {% else %}
-                  <li><a href="/premium" class="nav-link px-2 link-dark">Премиум</a></li>
+                  <li><a href="/premium" class="nav-link px-2 fs-5 my-pink-link">Премиум</a></li>
                 {% endif %}
                 {% if pages[3] %}
-                  <li><a href="/support" class="nav-link px-2">Поддержка</a></li>
+                  <li><a href="/support" class="nav-link px-2 fs-5 my-pink-link-active">Поддержка</a></li>
                 {% else %}
-                  <li><a href="/support" class="nav-link px-2 link-dark">Поддержка</a></li>
+                  <li><a href="/support" class="nav-link px-2 fs-5 my-pink-link">Поддержка</a></li>
                 {% endif %}
                 {% if pages[4] %}
-                  <li><a href="/about" class="nav-link px-2">О нас</a></li>
+                  <li><a href="/about" class="nav-link px-2 fs-5 my-pink-link-active">О нас</a></li>
                 {% else %}
-                  <li><a href="/about" class="nav-link px-2 link-dark">О нас</a></li>
+                  <li><a href="/about" class="nav-link px-2 fs-5 my-pink-link">О нас</a></li>
                 {% endif %}
               </ul>
               {% if login %}
@@ -48,8 +48,7 @@
                 </div>
               {% else %}
               <div class="col-md-3 text-end">
-                <a href="/account/login"><button type="button" class="btn btn-outline-primary me-2">Войти</button></a>
-                <a href="/account/register"><button type="button" class="btn btn-primary">Регистрация</button></a>
+                <p>Кот</p>
               </div>
               {% endif %}
             </header>
