--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block body %}
   <div class="px-4 py-5 my-5 text-center">
-    <h1 class="display-5 fw-bold">Привет!</h1>
+    <h1 class="display-5 fw-bold">Максимальная приватность</h1>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Чтобы пользоваться нашими сервисами необходимо войти в аккаунт. Если ты ещё не зарегистрирован, можешь сделать это прямо сейчас</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
