--- a/app/templates/premium.html
+++ b/app/templates/premium.html
@@ -8,7 +8,7 @@
     <h2 class="text-center m-5 text-muted">Выбери свой тариф</h2>
     <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
       <div class="col">
-        <div class="card mb-4 rounded-3 shadow-sm">
+        <div class="card mb-4 rounded-3 shadow-sm my-card">
           <div class="card-header py-3">
             <h4 class="my-0 fw-normal">Бесплатный</h4>
           </div>
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div class="col">
-        <div class="card mb-4 rounded-3 shadow-sm">
+        <div class="card mb-4 rounded-3 shadow-sm my-card">
           <div class="card-header py-3">
             <h4 class="my-0 fw-normal">Классический</h4>
           </div>
@@ -34,7 +34,7 @@
         </div>
       </div>
       <div class="col">
-        <div class="card mb-4 rounded-3 shadow-sm border-primary">
+        <div class="card mb-4 rounded-3 shadow-sm border-primary my-card">
           <div class="card-header py-3 text-white bg-primary border-primary">
             <h4 class="my-0 fw-normal">Профессиональный</h4>
           </div>
