--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -4,8 +4,13 @@
 {% endblock %}
 {% block body %}
 <div class="container col-xl-10 col-xxl-8 px-4 py-5">
+  <div class="row align-items-center">
+      <div class="col-lg-7 text-center text-lg-start">
+        <h1 class="display-4 fw-bold lh-1 mb-3">Максимальная приватность</h1>
+        <p class="col-lg-10 fs-4">Мы делаем всё, чтобы сохранить Вашу приватность. Но не забывайте о безопастности! Держите в секрете данные своей учётной записи. Обращайте внимание на адрес сайта.</p>
+      </div>
       <div class="col-md-10 mx-auto col-lg-5">
-        <form class="p-4 p-md-5 border rounded-3 bg-light" method="post">
+        <form class="p-4 p-md-5 rounded-3 my-card" method="post">
           <p>{{ message }}</p>
           <div class="form-floating mb-3">
             <input value="{{ Login if Login else '' }}" type="text" name='Login' class="form-control" id="floatingLogin" placeholder="Login">
@@ -29,5 +34,6 @@
         </form>
       </div>
     </div>
+</div>
 
 {% endblock %}
