--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,27 +16,27 @@
               </a>
               <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 {% if pages[0] %}
-                  <li><a href="/cloud" class="nav-link px-2 fs-5 my-pink-link-active">Хранилище</a></li>
+                  <li><a href="/cloud" class="nav-link px-2 fs-5 my-pink-link my-pink-link-active">Хранилище</a></li>
                 {% else %}
                   <li><a href="/cloud" class="nav-link px-2 fs-5 my-pink-link">Хранилище</a></li>
                 {% endif %}
                 {% if pages[1] %}
-                  <li><a href="/messenger" class="nav-link px-2 fs-5 my-pink-link-active">Мессенджер</a></li>
+                  <li><a href="/messenger" class="nav-link px-2 fs-5 my-pink-link my-pink-link-active">Мессенджер</a></li>
                 {% else %}
                   <li><a href="/messenger" class="nav-link px-2 fs-5 my-pink-link">Мессенджер</a></li>
                 {% endif %}
                 {% if pages[2] %}
-                  <li><a href="/premium" class="nav-link px-2 fs-5 my-pink-link-active">Премиум</a></li>
+                  <li><a href="/premium" class="nav-link px-2 fs-5 my-pink-link my-pink-link-active">Премиум</a></li>
                 {% else %}
                   <li><a href="/premium" class="nav-link px-2 fs-5 my-pink-link">Премиум</a></li>
                 {% endif %}
                 {% if pages[3] %}
-                  <li><a href="/support" class="nav-link px-2 fs-5 my-pink-link-active">Поддержка</a></li>
+                  <li><a href="/support" class="nav-link px-2 fs-5 my-pink-link my-pink-link-active">Поддержка</a></li>
                 {% else %}
                   <li><a href="/support" class="nav-link px-2 fs-5 my-pink-link">Поддержка</a></li>
                 {% endif %}
                 {% if pages[4] %}
-                  <li><a href="/about" class="nav-link px-2 fs-5 my-pink-link-active">О нас</a></li>
+                  <li><a href="/about" class="nav-link px-2 fs-5 my-pink-link my-pink-link-active">О нас</a></li>
                 {% else %}
                   <li><a href="/about" class="nav-link px-2 fs-5 my-pink-link">О нас</a></li>
                 {% endif %}
