--- a/app/templates/edit_account.html
+++ b/app/templates/edit_account.html
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="container col-xl-10 col-xxl-8 px-4 py-5">
       <div class="col-md-10 mx-auto col-lg-5">
-        <form class="p-4 p-md-5 border rounded-3 bg-light" method="post">
+        <form class="p-4 p-md-5 rounded-3 my-card" method="post">
           <p>{{ message }}</p>
           <div class="form-floating mb-3">
             <input type="password" name="OldPassword" class="form-control" id="floatingOldPassword" placeholder="password">
