--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -22,9 +22,9 @@
             <input value="{{ password if password else '' }}" name="Password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
             <label for="floatingPassword">Пароль</label>
           </div>
-          <button class="w-100 btn btn-lg btn-primary my-pink-button" type="submit">Войти</button>
-          <hr size="3" class="my-pink-line">
+          <button class="mb-3 w-100 btn btn-lg btn-primary my-pink-button" type="submit">Войти</button>
           <a class="w-100 btn btn-lg btn-outline-secondary" href="/account/register" >Регистрация</a>
+          <hr class="my-pink-line">
           <small class="text-muted">Нажимая кнопку Войти, Вы подтверждаете согласие с <a href="/politic">Политикой сайта</a></small>
         </form>
       </div>
