--- a/app/templates/messenger.html
+++ b/app/templates/messenger.html
@@ -8,7 +8,7 @@
 <link rel='stylesheet' href="{{ url_for('static', filename='css/messenger.css') }}">
 <div class="m-5">
     <aside id="my-sidebar">
-<form class="p-4 p-md-5 border rounded-3 bg-light my-sidebar-part" method="post">
+<form class="p-4 p-md-5 rounded-3 my-sidebar-part my-card" method="post">
     <h1>Добавить друга</h1>
     {% if message %}
         <p>{{ message }}</p>
@@ -19,7 +19,7 @@
     </div>
     <button class="w-100 btn btn-lg btn-primary" type="submit">Добавить</button>
 </form>
-<form class="p-4 p-md-5 border rounded-3 bg-light my-sidebar-part">
+<form class="p-4 p-md-5 rounded-3 my-sidebar-part my-card">
 <div class="people-list">
     <h2>Заявки в друзья</h2>
     <ul class="list-unstyled chat-list mt-2 mb-0">
