--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -28,8 +28,9 @@
             <input value="{{ RepeatPassword if RepeatPassword else '' }}" type="password" name="RepeatPassword" class="form-control" id="floatingPasswordRepeat" placeholder="Password">
             <label for="floatingPasswordRepeat">Повторите пароль<small>*</small></label>
           </div>
-          <button class="w-100 btn btn-lg btn-primary" type="submit">Создать аккаунт</button>
-          <hr class="my-4">
+          <button class="mb-3 w-100 btn btn-lg btn-primary my-pink-button" type="submit">Создать аккаунт</button>
+          <a class="w-100 btn btn-lg btn-outline-secondary" href="/" >Войти</a>
+          <hr class="my-pink-line">
           <small class="text-muted">Создав аккаунт, Вы подтверждаете согласие с <a href="/politic">Политикой сайта</a></small>
         </form>
       </div>
