void cloud white fix

--- a/app/templates/cloud.html
+++ b/app/templates/cloud.html
@@ -12,7 +12,7 @@
     </div>
   </section>
 {% if not files %}
-  <div class="py-5 bg-light">
+  <div class="py-5 my-grey">
     <p class="text-center lead text-muted">Здесь будут ваши файлы</p>
   </div>
 {% else %}
