--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,8 +43,8 @@
               </ul>
               {% if login %}
                 <div class="col-md-3 text-end">
-                  <a href="/account"><button type="button" class="btn btn-primary  me-2">Аккаунт</button></a>
-                  <a href="/account/logout"><button type="button" class="btn btn-outline-primary ">Выйти</button></a>
+                  <a href="/account" type="button" class="btn btn-primary me-2 my-pink-button">Аккаунт</a>
+                  <a href="/account/logout" type="button" class="btn btn-outline-primary my-pink-outline-button ">Выйти</a>
                 </div>
               {% else %}
               <div class="col-md-3 text-end">
