--- a/app/templates/file.html
+++ b/app/templates/file.html
@@ -38,7 +38,7 @@
                       Открытый (Файл могут скачать все, у кого есть ссылка)
                     </label>
                 </div><br>
-                <textarea class="form-control">{{ link }}</textarea>
+                <p class="my-big-text form-control">{{ link }}</p>
                 <button id="linkButton" type="button" class="btn btn-secondary" onclick="copyText( '{{ link }}' )">Скопировать ссылку</button>
                 <input class="btn btn-primary my-2" type="submit" value=Сохранить>
             </div>
