--- a/app/templates/cloud.html
+++ b/app/templates/cloud.html
@@ -7,7 +7,7 @@
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">Ваше хранилище</h1>
-        <a href="/cloud/load"><p class="lead btn btn-primary my-2">Загрузить файл</p></a>
+        <a href="/cloud/load" class="lead btn btn-primary my-2 my-pink-button">Загрузить файл</a>
       </div>
     </div>
   </section>
@@ -24,19 +24,19 @@
           <div class="col">
             <div class="card my-card">
               <div class="card-body">
-                <p class="card-text">{{ file.name  }}</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <p class="card-text">{{ file.name  }}</p>
+                  <small class="text-muted">{{ file.date.date() }}</small>
+                </div>
                 {% if file.desc %}
                 <p class="my-clip text-muted">{{ file.desc }}</p>
                 {% else %}
                 <p class="text-muted">Без описания</p> 
                 {% endif %}
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a type="button" href="/cloud/download/{{ file.path }}" class="btn btn-sm btn-outline-primary">Скачать</a>
-                    <a type="button" href="/cloud/edit_file/{{ file.path }}" class="btn btn-sm btn-outline-secondary">Подробнее</a>
-                    <a type="button" href="/cloud/remove/{{ file.path }}" class="btn btn-sm btn-outline-secondary">Удалить</a>
-                  </div>
-                  <small class="text-muted">{{ file.date.date() }}</small>
+                <div class="btn-group">
+                  <a type="button" href="/cloud/download/{{ file.path }}" class="btn btn-sm btn-outline-primary my-pink-outline-button">Скачать</a>
+                  <a type="button" href="/cloud/edit_file/{{ file.path }}" class="btn btn-sm btn-outline-secondary">Подробнее</a>
+                  <a type="button" href="/cloud/remove/{{ file.path }}" class="btn btn-sm btn-outline-secondary">Удалить</a>
                 </div>
               </div>
             </div>
