--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,9 +26,9 @@
                   <li><a href="/messenger" class="nav-link px-2 fs-5 my-pink-link">Мессенджер</a></li>
                 {% endif %}
                 {% if pages[2] %}
-                  <li><a href="/premium" class="nav-link px-2 fs-5 my-pink-link my-pink-link-active">Премиум</a></li>
+                  <li><a href="/premium" class="nav-link px-2 fs-5 my-pink-link my-pink-link-active">Подписка</a></li>
                 {% else %}
-                  <li><a href="/premium" class="nav-link px-2 fs-5 my-pink-link">Премиум</a></li>
+                  <li><a href="/premium" class="nav-link px-2 fs-5 my-pink-link">Подписка</a></li>
                 {% endif %}
                 {% if pages[3] %}
                   <li><a href="/support" class="nav-link px-2 fs-5 my-pink-link my-pink-link-active">Поддержка</a></li>
