--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -24,7 +24,7 @@
           </div>
           <div class="checkbox mb-3 text-center lead">
             <label>
-              <input id="RememberMe" type="checkbox" value="remember-me" {% if checked %}checked{% endif %}><span class="w m-2 unselectable">Запомнить меня</span>
+              <input id="RememberMe" type="checkbox" class="my-pink-checkbox" value="remember-me" {% if checked %}checked{% endif %}><span class="w m-2 unselectable">Запомнить меня</span>
             </label>
           </div>
           <button class="mb-3 w-100 btn btn-lg btn-primary my-pink-button" type="submit">Войти</button>
